# cookiecutter-mlops-se489

./: .gitignore  README.md  cookiecutter.json  requirements.txt
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.repo_name }}/: LICENSE  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
{{ cookiecutter.repo_name }}/.github/workflows/: ci.yml
{{ cookiecutter.repo_name }}/api/: README.md
{{ cookiecutter.repo_name }}/configs/: config.yaml
{{ cookiecutter.repo_name }}/data/: README.md
{{ cookiecutter.repo_name }}/dockerfiles/: Dockerfile  README.md
{{ cookiecutter.repo_name }}/docs/: PHASE1.md  PHASE2.md  PHASE3.md  api.md  getting_started.md  index.md  mkdocs.yml
{{ cookiecutter.repo_name }}/notebooks/: README.md
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/: __init__.py  predict_model.py  train_model.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/data/: __init__.py  loaders.py  make_dataset.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/evaluation/: __init__.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/features/: __init__.py  build_features.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/models/: __init__.py  model.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/utils/: __init__.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/visualization/: __init__.py  visualize.py
{{ cookiecutter.repo_name }}/tests/: test_model.py
