[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]
requires-python = ">={{ cookiecutter.python_version }}"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
{%- if cookiecutter.ml_framework == 'pytorch' %}
    "torch>=2.3.0",
{%- endif %}
{%- if cookiecutter.ml_framework == 'tensorflow' %}
    "tensorflow>=2.16.0",
{%- endif %}
{%- if cookiecutter.experiment_tracking == 'mlflow' %}
    "mlflow>=2.16.0",
{%- endif %}
{%- if cookiecutter.experiment_tracking == 'wandb' %}
    "wandb>=0.18.0",
{%- endif %}
{%- if cookiecutter.include_hydra == 'yes' %}
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
{%- endif %}
{%- if cookiecutter.use_dvc == 'yes' %}
    "dvc>=3.55.0",
{%- endif %}
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools.packages.find]
where = ["src"]
